# sayso

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  TODOS.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  error.rs  executor.rs  fsm.rs  injector.rs  intent.rs  llm.rs  macos_hotkeys.rs  macos_hud.rs  main.rs  polish.rs  safety.rs  stats.rs  stt.rs
stitch/: notifications.html  onboarding-step1.html  onboarding-step2.html  onboarding-step3.html  onboarding-step4.html  settings.html  statistics-empty.html  statistics.html
