[package]
name = "sayso"
version = "0.1.0"
description = "Open-source voice keyboard + command executor"
authors = []
license = "MIT"
repository = "https://github.com/wangzhs/sayso"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "sayso"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio recording
cpal = "0.15"
hound = "3"

# HTTP client for STT + LLM APIs
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Text injection
enigo = "0.2"

# Clipboard (fallback injection for Electron apps)
arboard = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
tauri-plugin-log = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Config/data directory resolution (cross-platform)
dirs = "5"

# Platform-specific: macOS Keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"


[features]
# Enables Tauri custom protocol for dev mode
custom-protocol = ["tauri/custom-protocol"]
